--- a/src/css/style.css
+++ b/src/css/style.css
@@ -410,6 +410,7 @@ body {
 @media (max-width: 56.25em) {
   .card {
     height: auto;
+    border-radius: 3px;
     background-color: #fff;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
     .card__side {
@@ -418,7 +419,8 @@ body {
       box-shadow: none; }
       .card__side--back {
         transform: rotateY(0);
-        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%); }
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+        border-radius: 0 0 3px 3px; }
     .card:hover .card__side--front {
       transform: rotateY(0deg); }
     .card__details {
