--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -221,6 +221,7 @@
 @include respond(tab-port) {
   .card {
     height: auto; // No longer have to declare a hight since we arent trying to match up a front and back side
+    border-radius: $border-radius-small;
     background-color: $color-white; // The blank space between the front and back card as to be filled now
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
 
@@ -234,6 +235,7 @@
         // Disable rotation
         transform: rotateY(0);
         clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+        border-radius: 0 0 $border-radius-small $border-radius-small;
       }
     }
 
