--- a/src/css/style.css
+++ b/src/css/style.css
@@ -956,7 +956,13 @@ body {
   background-size: cover;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2); }
+  @media (max-width: 75em) {
+    .booking {
+      background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 70%, transparent 70%), url(../images/nat-10.jpg); } }
   .booking__form {
     width: 50%;
     height: 100%;
     padding: 6rem; }
+    @media (max-width: 75em) {
+      .booking__form {
+        width: 70%; } }
