--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -99,9 +99,23 @@
   border-radius: $border-radius-small;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 70%,
+        transparent 70%
+      ),
+      url(../images/nat-10.jpg);
+  }
+
   &__form {
     width: 50%;
     height: 100%;
     padding: 6rem;
+
+    @include respond(tab-land) {
+      width: 70%;
+    }
   }
 }
