--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -95,7 +95,7 @@
       transparent 50%
     ),
     url(../images/nat-10.jpg); // This is a second background-image property behind the gradient
-  background-size: cover; //
+  background-size: cover; // Fills the element in the x and y directions as best as possible
   border-radius: $border-radius-small;
   box-shadow: 0 1.5rem 4rem rgba($color-black, 0.2);
 
@@ -103,10 +103,22 @@
     background-image: linear-gradient(
         105deg,
         rgba($color-white, 0.9) 0%,
-        rgba($color-white, 0.9) 70%,
-        transparent 70%
+        rgba($color-white, 0.9) 65%,
+        transparent 65%
       ),
       url(../images/nat-10.jpg);
+    margin: 0 4rem;
+  }
+
+  @include respond(tab-port) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%,
+        transparent 65%
+      ),
+      url(../images/nat-10.jpg);
+    margin: 0;
   }
 
   &__form {
@@ -115,7 +127,11 @@
     padding: 6rem;
 
     @include respond(tab-land) {
-      width: 70%;
+      width: 65%;
+    }
+
+    @include respond(tab-port) {
+      width: 100%;
     }
   }
 }
