--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -114,8 +114,7 @@
     background-image: linear-gradient(
         to right,
         rgba($color-white, 0.9) 0%,
-        rgba($color-white, 0.9) 100%,
-        transparent 65%
+        rgba($color-white, 0.9) 100%
       ),
       url(../images/nat-10.jpg);
     margin: 0;
