--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -218,7 +218,7 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-@include respond(tab-port) {
+@include respond(tab-land) {
   .card {
     height: auto; // No longer have to declare a hight since we arent trying to match up a front and back side
     border-radius: $border-radius-small;
