--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -131,5 +131,11 @@
     &:hover {
       color: $color-secondary-dark;
     }
+
+    @include respond(tab-port) {
+      background-color: $color-white;
+      padding: 0 0.6rem;
+      border-radius: 50%;
+    }
   }
 }
