--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -76,6 +76,13 @@
       @content;
     }
   }
+
+  @if $breakpoint == tall {
+    // Larger than 1036px tall (1036/16)
+    @media (min-height: 64.75em) {
+      @content;
+    }
+  }
 }
 
 /* @mixin respond-phone {
