added a blur to the background of the modal as well as fixed the sliver of background peering through from behind the modal images

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -604,6 +604,7 @@ body {
   height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(10px);
   position: fixed;
   top: 0;
   left: 0;
@@ -632,11 +633,13 @@ body {
     width: 33.333333%;
     display: table-cell;
     vertical-align: middle;
-    background: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)); }
+    background: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8));
+    padding-right: 0.19rem; }
     @media (max-width: 56.25em) {
       .modal__left {
         width: 100%;
-        display: block; } }
+        display: block;
+        padding-right: 0; } }
     @media (max-width: 37.5em) {
       .modal__left {
         display: none; } }
@@ -651,6 +654,7 @@ body {
         display: block; } }
   .modal__img {
     display: block;
+    transform: scale(1.01);
     width: 100%; }
     @media (max-width: 56.25em) {
       .modal__img {
