--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,9 +1,17 @@
 .modal {
   height: 100vh;
   width: 100%; // 100vw would work as well
-  background-color: rgba($color-black, 0.8);
 
-  backdrop-filter: blur(10px);
+  background-color: rgba($color-black, 0.3);
+
+  // Graceful degradation for backdrop-filter as it is not supported on some browsers
+  @supports (backdrop-filter: blur(10px)) or
+    (-webkit-backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(
+      10px
+    ); // Apply a blur to the area behind the modal (behind the dark filter even, so the page itself)
+  }
 
   position: fixed;
   top: 0;
