--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -20,14 +20,16 @@
 
   // 192dpi is simply a commonly used resolution breakpoint to signify a high resolution screen (it is a dpi of Apple Retina displays)
   // If the resolution is high AND viewport greater than 600px width (600/16 = 37.5em), use the high res version OR, if the viewport is huge (125em/2000px) use the high res
-  @media (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) {
+  @media (min-resolution: 192dpi) and (min-width: 37.5em),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    (min-width: 125em) {
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)
       ),
       url(../images/hero.jpg);
-  }
+  } // -webkit-min-device-pixel-ratio is here specifically for safari where min-resolution does not work (min-width: 125em)
 
   @include respond(phone) {
     clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
