--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -2,6 +2,7 @@
 
 // class selector instal of default header element
 .header {
+  height: 85vh;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.8),
