--- a/src/css/style.css
+++ b/src/css/style.css
@@ -106,9 +106,12 @@ body {
   text-transform: uppercase;
   display: inline-block;
   transition: all 0.3s;
-  background-image: linear-gradient(45deg, #7ed56f, #28b485);
-  background-clip: text;
-  color: transparent; }
+  color: #7ed56f; }
+  @supports (background-clip: text) {
+    .heading-secondary {
+      background-image: linear-gradient(45deg, #7ed56f, #28b485);
+      background-clip: text;
+      color: transparent; } }
   @media (max-width: 56.25em) {
     .heading-secondary {
       font-size: 3rem; } }
