--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -218,7 +218,9 @@
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-@include respond(tab-land) {
+/* @include respond(tab-land) { */
+// This is saying use these styles if the viewport is that of a landscape tablet OR if the device has no hover input (any touch device)
+@media only screen and (max-width: 56.25em), only screen and (hover: none) {
   .card {
     height: auto; // No longer have to declare a hight since we arent trying to match up a front and back side
     border-radius: $border-radius-small;
